# PersonalWebsite

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/migrations/2022-11-23-190105_create_articles/: up.sql
backend/src/: main.rs
backend/src/handlers/: articles.rs
backend/src/models/: articles.rs  from_model.rs  mod.rs
client/: package-lock.json  package.json  vue.config.js
client/src/: App.vue
client/src/store/: index.ts
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js  tasks.md
frontend/src/: app.rs  main.rs
frontend/src/components/: article.rs  articles.rs  card.rs  mod.rs  navbar.rs  not_found.rs
frontend/src/entities/: interfaces.rs
frontend/src/pages/: about_me.rs  about_page.rs  home_page.rs
frontend/src/public/css/: output.css  site.css
frontend/src/public/js/: site.js
frontend/src/routes/: mod.rs
frontend/src/services/: articles.rs  exampleFetch.rs  fetch.rs  future.rs  mod.rs
frontend/src/utils/: date.rs
server/: app.js  package-lock.json  package.json
testing/src/: main.rs
testing/src/components/: card.rs  collapse.rs  dropdown.rs  hero.rs  test.rs
testing/src/pages/: about_me.rs  home_page.rs  mod.rs  play_info.rs
testing/src/public/css/: input.css  output.css  site.css
testing/src/public/js/: site.js
testing/src/routes/: mod.rs
