[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8.8"
serde = "1.0"
serde_json = "1.0"
dotenv_codegen = "0.15.0"
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-cors = "0.5.4"
actix-service = "1.0.1"