[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { rev="d1f15b6f862d555023c18a48c5fb154e539be22b", git = "https://github.com/yewstack/yew"}
yew-functional = { rev="d1f15b6f862d555023c18a48c5fb154e539be22b",  git = "https://github.com/yewstack/yew"}
yew-router = { rev="d1f15b6f862d555023c18a48c5fb154e539be22b",  git = "https://github.com/yewstack/yew"}
serde = { version = "1.0.80", features = ["derive"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-features = "0.4.20"
chrono = { version = "0.4.10", features = ["wasmbind", "serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.14"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Document",
    "Element",
    "HtmlCollection",
    "HtmlElement",
    'Window',
    'ScrollToOptions',
    'HtmlDocument',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestRedirect',
    'Response',
]


